# textual-synopsis

./: .gitignore  LICENSE  README.md  app.py  benchmark.py  multi_align.py  pipeline_logic.py  pyproject.toml  requirements.txt  streamlit_app.py  test_bio.py  test_lcs.py  to_excel.py
lib/: genalog_anchor.py  genalog_preprocess.py  pipeline.py
src/textual_synopsis/: genalog_alignment.py  genalog_anchor.py  genalog_lcs.py  to_excel.py
textual_synopsis/: genalog_alignment.py  multi_align.py
